@@ -1053,6 +1053,7 @@ PORT ds390_port =
   _ds390_setDefaultOptions,
   ds390_assignRegisters,
   _ds390_getRegName,
+  0,
   NULL,
   _ds390_keywords,
   _ds390_genAssemblerPreamble,
@@ -1396,6 +1397,7 @@ PORT tininative_port =
   _tininative_setDefaultOptions,
   ds390_assignRegisters,
   _ds390_getRegName,
+  0,
   NULL,
   _tininative_keywords,
   _tininative_genAssemblerPreamble,
@@ -1656,6 +1658,7 @@ PORT ds400_port =
   _ds390_setDefaultOptions,
   ds390_assignRegisters,
   _ds390_getRegName,
+  0,
   NULL,
   _ds390_keywords,
   _ds390_genAssemblerPreamble,
